<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="manifest_app_name">Accept Sample App - Thyron</string>

    <string name="login_error">Login error</string>
    <string name="login_empty_name">User name field is empty.</string>
    <string name="login_empty_pass">Password field is empty.</string>
    <string name="login_empty_pass_and_name">User name and password fields are empty.</string>

    <string name="acceptsdk_payment_activity_cancel_signature_confirmation_button">Cancel</string>
    <string name="acceptsdk_payment_activity_cancel_button">Cancel</string>
    <string name="acceptsdk_payment_activity_retry_button">Retry</string>
    <string name="acceptsdk_payment_activity_confirm_signature_button">Confirm</string>
    <string name="payment_sign_in_label">Please sign in</string>

    <string name="acceptsdk_dialog_payment_error_title">Transaction error</string>
    <string name="acceptsdk_dialog_payment_error_message">Transaction rejected ( %s ).</string>
    <string name="acceptsdk_dialog_payment_error_confirm">OK</string>

    <string name="acceptsdk_dialog_signature_confirm_title">Signature check</string>
    <string name="acceptsdk_dialog_signature_confirm_message">Please give the device to the merchant for signature confirmation. The merchant must confirm the signature pressing OK at the terminal.</string>
    <string name="acceptsdk_dialog_signature_confirm_confirm">Is OK</string>
    <string name="acceptsdk_dialog_signature_confirm_cancel">Cancel</string>

    <string name="acceptsdk_dialog_signature_instruction_title">Signature check</string>
    <string name="acceptsdk_dialog_signature_instruction_message">Please give this device to customer and ask to draw signature on device\'s screen.</string>
    <string name="acceptsdk_dialog_signature_instruction_confirm">OK</string>
    <string name="acceptsdk_dialog_signature_instruction_cancel">Cancel</string>

    <string name="acceptsdk_dialog_terminal_chooser_title">Select terminal:</string>
    <string name="acceptsdk_dialog_terminal_chooser_cancel">Cancel</string>

    <string name="acceptsdk_dialog_no_terminals_title">No terminals</string>
    <string name="acceptsdk_dialog_no_terminals_message">Please pair terminal with your device and try again.</string>
    <string name="acceptsdk_dialog_no_terminals_confirm">OK</string>

    <string name="acceptsdk_dialog_cancel_signature_request_title">Signature</string>
    <string name="acceptsdk_dialog_cancel_signature_request_message">Do you really want to cancel signature step?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="acceptsdk_dialog_nothing_drawn_title">Signature</string>
    <string name="acceptsdk_dialog_nothing_drawn_message">No signature detected, please sign in.</string>
    <string name="acceptsdk_dialog_nothing_drawn_confirm">OK</string>

    <string name="acceptsdk_dialog_discovery_error_title">Discovery error</string>
    <string name="acceptsdk_dialog_discovery_error_message">Error occurred during terminals discovery ( %s ).</string>
    <string name="acceptsdk_dialog_discovery_error_confirm">OK</string>

    <string name="acceptsdk_progress__sucesful">Transaction approved.</string>
    <string name="acceptsdk_progress__declined">Transaction rejected.</string>
    <string name="acceptsdk_progress__searching">Searching for devices…</string>
    <string name="acceptsdk_progress__connecting">Connecting to %s…</string>
    <string name="acceptsdk_progress__terminal_configuration">Loading terminal configuration…</string>
    <string name="acceptsdk_progress__firmware">Install</string>
    <string name="acceptsdk_progress__ca_keys">Install</string>
    <string name="acceptsdk_progress__online">Online processing…</string>
    <string name="acceptsdk_progress__processing">Processing data…</string>
    <string name="acceptsdk_progress__follow">Please follow instructions displayed on terminal</string>
    <string name="acceptsdk_progress__confirm_amount">Confirm amount…</string>
    <string name="acceptsdk_progress__tc_update">Sending transaction confirmation…</string>
    <string name="acceptsdk_progress__enter_pin">Enter PIN…</string>
    <string name="acceptsdk_progress__restart">Restart</string>
    <string name="acceptsdk_progress__insert_or_swipe">Insert or swipe card…</string>
    <string name="acceptsdk_progress__insert">Insert card…</string>
    <string name="acceptsdk_progress__swipe">Swipe card…</string>
    <string name="acceptsdk_progress__remove">Pleases remove card…</string>
    <string name="acceptsdk_progress__customer_sign_request">Please sign here and confirm signature with CONFIRM button.</string>
    <string name="acceptsdk_progress__wait">"Loading, please wait…"</string>
    <string name="acceptsdk_progress__bad_readout">"Bad readout"</string>
    <string name="acceptsdk_progress__loading_pls_wait">Loading, please wait…</string>
    <string name="acceptsdk_progress__insert_swipe_or_tap">Insert, swipe or present card…</string>
    <string name="acceptsdk_progress__confirm_signature">Confirm signature…</string>
    <string name="acceptsdk_progress__terminating">Terminating…</string>
    <string name="acceotsdk_progress__unknown">Uknown</string>

    <string name="toast_label_successful_payment">"Payment successful!"</string>
    <string name="toast_label_no_transactions">"No transactions."</string>
    <!--<string name="payment_title">"%s %s"</string>-->
    <string name="dialog_trx_load_err">"Transactions loading error"</string>
    <string name="blank">" "</string>

    <string name="reversed">Transaction was reversed</string>
    <string name="refunded">Transaction was refunded</string>
    <string name="reversed_or_refunded">Transaction was reversed or refunded</string>
    <string name="not_reversed_refunded">Transaction can not be reversed or refunded</string>
    <string name="payment_cancel_button">Cancel</string>
    <string name="payment_confirm_button">Confirm</string>
    <string name="menu_device_identity_error">Check device identity error code : %s</string>
    <string name="menu_bt_error">Bluetooth connection error.</string>
    <string name="menu_fw_version_check">Started firmware version check</string>
    <string name="menu_fw_check_wrong_be_data">Please check your settings, current version from backend have wrong data</string>
    <string name="menu_fw_check_update_not_needed">Firmware version update is not needed</string>
    <string name="fw_update_progress_contacting">CONTACTING</string>
    <string name="fw_update_message_bt_connecting">Bluetooth pairing: connecting</string>
    <string name="fw_update_failed_download_and_extract">Failed to open the zipped configuration file</string>

    <string-array name="payment_methods">
        <item>Card</item>
        <item>Cash</item>
    </string-array>
    <string name="title_activity_tmp">Tmp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_material">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email or username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_empty_password">Password can\'t be empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_empty_username">Username can\'t be empty</string>
    <string name="btn_login_label">Login</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="menu_item_trx_history">Transactions history</string>
    <string name="menu_item_log_out">Log out</string>
    <string name="menu_item_new_trx">New payment</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_fw_update">Firmware update</string>
    <string name="menu_item_receipt">Receipt</string>
    <string name="menu_item_reverse">Reverse</string>
    <string name="menu_item_refund">Refund</string>
    <string name="checkbox_sepa">SEPA</string>
    <string name="title_activity_payment_status">PaymentStatus</string>
    <string name="label_wrong_config">Something is wrong. Application is not in runnable state</string>
    <string name="switcher_contactless">Contactless</string>
    <string name="switcher_usb">USB interface</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_fw_check_net_con">Please check your internet connection</string>
    <string name="fragment_amount_label">Please type amount of your payment</string>
    <string name="fragment_amount_pay">Pay</string>
    <string name="receipt_total">Total :</string>
    <string name="receipt_payment_details">Payment details</string>
    <string name="receipt_status">Status:</string>
    <string name="receipt_transaction_type">Transaction type:</string>
    <string name="receipt_card_number">Card number:</string>
    <string name="receipt_cardholder_name">Cardholder name:</string>
    <string name="receipt_card_type">Card type:</string>
    <string name="receipt_authorization_code">Authorization code:</string>
    <string name="receipt_signature">Signature:</string>
    <string name="receipt_by_wirecard">Payment issued by accept. by Wirecard</string>

</resources>